--- a/src/routes/Home/test.css
+++ b/src/routes/Home/test.css
@@ -24,13 +24,17 @@
   }
 
 .callviewHeader{
-  font-size: 16px;
+  font-size: 18px;
+  text-decoration: none;
+  color: black;
 }
 
-.callviewHeader2{
-  font-size: 16px;
-  padding: 0px 12px;
+.callviewHeader:hover{
+  font-size: 18px;
+  text-decoration: none;
+  color: #FF6B00 !important;
 }
+
   Button:hover{
     background-color: #FF6B00 !important;
   }
@@ -155,11 +159,20 @@
       }
 
       .sidebar-text{
-        color: #384364;
-        margin-top: 20px;
-        margin-left: 105px;
-        font-size: 16px;
+        margin-top: 25px;
+        margin-left: 100px;
+        font-size: 14px;
+          font: Bold 12px/28px;
+          color: #384364;
     }
+
+    .sidebar-text:hover{
+      margin-top: 25px;
+      margin-left: 100px;
+      font-size: 14px;
+        font: Bold 14px/20px;
+        color: #FF6B00;
+  }
 
   #sidebar-header{
     font-size: 20px;
@@ -249,63 +262,52 @@
 
 
 
-      .label-active{
-        color:green;
-        padding:5px 18px;
-        width: 95px;
-        background-color: #DAF7E8;
-        border-radius: 29%;
-        text-align: center;
-      }
-
-      .label-voicenote{
-        color:gray;
-        padding:5px 18px;
-        width: 95px;
-        background-color: #FFF9C4;
-        border-radius: 29%;
-        text-align: center;
-      }
-  
-
-      .label-style{
-        padding: 10px 30px;
-        color:green;
-        text-align: center;
-        background-color: rgb(147, 202, 161);
-        border-radius: 10%;
-      }
-
-      .label-missed{
-        color:gray;
-        padding:5px 18px;
-        width: 110px;
-        background-color: #FFE2E6;
-        border-radius: 29%;
-        text-align: center;
-      }
-
-      .label-dropped{
-        color:purple;
-        padding:5px 18px;
-        width: 95px;
-        background-color: #E8E7FF;
-        border-radius: 29%;
-        text-align: center;
-      }
+     
       .table-body td{
         font-size: 14px;
       }
 
-      .label-inactive{
-        color:gray;
-        padding:5px 18px;
-        width: 95px;
-        background-color: #F5F6FA;
-        border-radius: 29%;
+      #callTableHeader td{
+        font-size: 14px;
         text-align: center;
 
       }
+
+   
+
+      .label {
+        color: white;
+        padding: 8px;
+        font-family: Arial;
+      }
+      .fault {
+        background-color: #EEEEEE;
+        color:#333333;
+        font-size: 12px;
+        padding: 7px 15px;
+        text-align: center;
+
+      } 
+
+      .missed {
+        background-color: #FFE2E6;
+        color:#333333;
+        font-size: 12px;
+        padding: 7px 15px;
+        text-align: center;
+
+      } 
+
+      .voicenote {
+        background-color: #DAF7E8;
+        color:#0B6437;
+        font-size: 12px;
+        padding: 7px 15px;
+        text-align: center;
+      } 
+
+
+
 
       .tableIcon {
         position: absolute;
