--- a/src/routes/Home/test.css
+++ b/src/routes/Home/test.css
@@ -23,14 +23,33 @@
     width: 83%;
   }
 
+
+
 .callviewHeader{
-  font-size: 18px;
+  font-size: 16px;
   text-decoration: none;
   color: black;
 }
 
 .callviewHeader:hover{
-  font-size: 18px;
+  font-size: 17px;
+  text-decoration: none;
+  color: #FF6B00 !important;
+}
+
+
+
+.callviewHeader2{
+  font-size: 16px;
+  text-decoration: none;
+  padding: 0px 12px;
+  color: black;
+
+}
+
+
+.callviewHeader2:hover{
+  font-size: 17px;
   text-decoration: none;
   color: #FF6B00 !important;
 }
@@ -173,6 +192,15 @@
         font: Bold 14px/20px;
         color: #FF6B00;
   }
+
+  #radioInput{
+    margin-left: -30px;
+    margin-top: -4px;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+  }
+
 
   #sidebar-header{
     font-size: 20px;
@@ -491,6 +519,27 @@
 }
 .row-direction{
   padding: 12px 0px;
+}
+
+/* Profile Category Overlay */
+.existing-category-card {
+  border: 1px solid #ddd;
+  height: 10.3rem;
+  border-bottom-left-radius: 8px;
+  border-top-left-radius: 8px;
+}
+
+.existing-category-card2{
+  border: 1px solid #ddd;
+  border-bottom-right-radius: 8px;
+  border-top-right-radius: 8px;
+  height: 10.3rem;
+}
+/* End Profile Category Overlay */
+
+#as{
+  background-color: red;
+  position: absolute;
 }
 
 .row-direction .cursor{
