--- a/src/components/SideNav/sidenav.css
+++ b/src/components/SideNav/sidenav.css
@@ -1,11 +1,15 @@
 .sidenav-body {
   padding: 104px 32.5px 0;
-  overflow-y: scroll;
+  overflow-y: hidden;
   width: 100%;
 }
 
 
 .sidenav-body::-webkit-scrollbar {
+  display: none;
+}
+
+.sidenav-body::-moz-scrollbar {
   display: none;
 }
 
@@ -107,13 +111,13 @@
   .sidenav-body {
     padding: 104px 32.5px 0;
     margin-top: 110px;
-    overflow-y: scroll;
+    overflow-y: hidden;
     width: 100%;
   }
 
   .sidebar-body {
     padding: 104px 32.5px 0;
-    overflow-y: scroll;
+    overflow-y: hidden;
     width: 100%;
   }
   
