--- a/src/routes/Admin/admin.css
+++ b/src/routes/Admin/admin.css
@@ -1379,6 +1379,7 @@ text-align: center;
   position: absolute;
   margin-top: 2000px;
   padding-left: 40px;
+  margin-top: 0px;
  /* background-color: #fff; 
    z-index: 101;
   box-shadow: 0px 3px 6px #00000014;
