--- a/src/routes/Home/test.css
+++ b/src/routes/Home/test.css
@@ -559,6 +559,7 @@ margin-top: -5px;
   margin-top: 2000px;
   padding-left: 40px;
   background-color: #fff; 
+  margin-top: 0px;
  
  /*  z-index: 101;
   box-shadow: 0px 3px 6px #00000014;
@@ -781,6 +782,20 @@ margin-top: -5px;
                    margin-top: 162px;
                   position: absolute;
             }
+
+            #EmailSentSuccess{
+              height:330px;
+               margin-left:470px;
+               width:390px;
+               margin-top: 162px;
+              position: absolute;
+        }
+
+        .success-mark{
+          width: 42px;
+          height: 42px;
+          margin-left: 20px;
+        }
           /*Forgot Password Page Style End*/
 
 
