--- a/src/assets/styles/admin.css
+++ b/src/assets/styles/admin.css
@@ -410,6 +410,8 @@
       text-transform: capitalize;
       color: white;
     }
+
+   
   
   .field{
    margin-top: -20px;
@@ -1602,6 +1604,14 @@
     background: var(--text-white);
     box-shadow: 0px 3px 6px #0000000a;
     padding: 0 32px 24px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .previous-header-new {
+    height: 50px;
+    background: var(--text-white);
+    padding: 0 2px 24px;
     display: flex;
     justify-content: space-between;
   }
