--- a/src/assets/styles/test.css
+++ b/src/assets/styles/test.css
@@ -7,14 +7,7 @@
       height: 1000px;
     }
    
-    /*
-     Style of Home page using admin
-    .screen-padding-home{
-      width: 980px;
-      height: 1000px;
-      margin-left: 340px;
-    }
-    */
+
   #profilecallContainer{
     width: 1000px;
     margin-top: 25px;
@@ -76,6 +69,22 @@
     .callID{
       margin-top: 30px;
     }
+
+    .callIDNew{
+        margin-top: 16px;
+      }
+
+    
+
+      .callID-history-New {
+        display: flex;
+        justify-content: space-between;
+        
+      }
+      
+      .callID-history-New > div {
+        padding: 0px 0px 0px 10px;
+      }
   
     .callID-history{
       margin-top: 20px;
@@ -89,6 +98,12 @@
     #calltopbutton{
       margin-top: -15px;
     }
+
+    #callIDtopbutton{
+        margin-top: 2px;
+        margin-right: -25px !important;
+    }
+
       .graphHeader{
           margin-left: 70px;
           margin-top: -40px;
@@ -112,13 +127,8 @@
       .graph {
           position: absolute;
           right: 0px;
-          /*
-          Style of Home page using admin
           left: 850px;
           margin-top: 40px;
-          */
-          left: 450px;
-          margin-top: 55px;   
         width: 991px;
         height: 660.92px;
           background-repeat: no-repeat;
@@ -807,17 +817,17 @@
               }
   
               #EmailSentSuccess{
-                height:330px;
+                height:370px;
                  margin-left:470px;
-                 width:390px;
+                 width:480px;
                  margin-top: 162px;
                 position: absolute;
           }
   
           #resetPasswordDiv{
-            height:330px;
+            height:370px;
              margin-left:470px;
-             width:470px;
+             width:480px;
              margin-top: 162px;
             position: absolute;
       }
