--- a/src/assets/styles/test.css
+++ b/src/assets/styles/test.css
@@ -24,6 +24,7 @@
       margin-left: -60px;
       position: absolute;
       width: 83%;
+      height: 1415px;
     }
   
   
@@ -43,8 +44,10 @@
   
   
     Button:hover{
-      background-color: #FF6B00 !important;
+      background-color: #336799 !important;
+      border: 1px solid #336799;
     }
+
     
   #buttonText{
     color: white;
