--- a/src/components/SideNav/sidenav.css
+++ b/src/components/SideNav/sidenav.css
@@ -25,7 +25,14 @@
   flex-direction: column;
 }
 
-
+.blue-hover {
+  border: 1px solid var(--text-white);
+  transition: 0.3s all ease-in-out;
+}
+.blue-hover:hover {
+  border: 1px solid #ff6501;
+  background-color: #ff6501 !important;
+}
 
 .account-button {
   transition: 0.3s all ease-in-out;
@@ -33,6 +40,21 @@
   background: var(--text-white);
   border: 1px solid #dddddd;
 }
+
+.account-button h6:hover {
+  
+  color: white !important;
+  font-weight: bold;
+  font-size: 12px;
+}
+
+.account-button:hover {
+  transition: 0.3s all ease-in-out;
+  color: var(--main-color) !important;
+  background: #FF6501 !important;
+  border: 1px solid #dddddd;
+}
+
 
 .sidenav-list {
   margin-top: 41px;
@@ -101,7 +123,7 @@
 }
 
 .logout {
-  margin-bottom: 54px;
+  margin-bottom: 44px;
   text-align: center;
   cursor: pointer;
 }
@@ -113,6 +135,10 @@
     margin-top: 110px;
     overflow-y: hidden;
     width: 100%;
+  }
+
+  .logout{
+    margin-top: -10px !important;
   }
 
   .sidebar-body {
@@ -161,6 +187,24 @@
     transition: 0.3s all ease-in-out;
     color: var(--main-color);
     background: var(--text-white);
+    border: 1px solid #dddddd;
+  }
+  .account-button h6{
+    color: #333333 !important;
+    font-weight: bold;
+    font-size: 12px;
+  }
+  .account-button h6:hover {
+    color: white !important;
+    font-weight: bold;
+    font-size: 12px;
+  }
+  
+
+  .account-button:hover {
+    transition: 0.3s all ease-in-out;
+    color: var(--main-color) !important;
+    background: #FF6501 !important;
     border: 1px solid #dddddd;
   }
   
@@ -222,7 +266,7 @@
   }
 
   #sidebarHr{
-    margin-top: 40px;
+    margin-top: 25px;
   }
 
 
